--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,14 +24,14 @@ jobs:
             cd /home/ubuntu || exit 1
 
             if [ ! -d "backend" ]; then
-              git clone:https://github.com/hariharanaiml/backend.git
+              git clone https://github.com/hariharanaiml/backend.git
             fi
 
             cd backend || exit 1
             git pull origin main
 
             echo "MONGO_URI=${{ secrets.MONGO_URI }}" > .env
-            echo "PORT=5000" >> .env
+            echo "PORT=4000" >> .env
 
             npm install
             pm2 delete student-api || true
